--- a/Rotorz.Json/Rotorz.Json.csproj
+++ b/Rotorz.Json/Rotorz.Json.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Json\JsonStringNode.cs" />
     <Compile Include="Json\JsonWriter.cs" />
     <Compile Include="Json\JsonWriterSettings.cs" />
+    <Compile Include="Json\MessagePack\MessagePackReader.cs" />
     <Compile Include="Json\Serialization\MetaType.cs" />
     <Compile Include="Json\Serialization\ReflectionUtility.cs" />
     <Compile Include="Json\Serialization\SerializableMember.cs" />
