--- a/Rotorz.Json.Tests/Rotorz.Json.Tests.csproj
+++ b/Rotorz.Json.Tests/Rotorz.Json.Tests.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Json\JsonIntegerNodeTests.cs" />
     <Compile Include="Json\JsonStringNodeTests.cs" />
     <Compile Include="Json\JsonWriterTests.cs" />
-    <Compile Include="Json\MessagePack\MessagePackTests.cs" />
+    <Compile Include="Json\MessagePack\MessagePackReaderTests.cs" />
     <Compile Include="Json\Serialization\ReflectionUtilityTests.cs" />
     <Compile Include="Json\JsonNodeTests.cs" />
     <Compile Include="Json\Serialization\MetaTypeTests.cs" />
