--- a/Rotorz.Json/Rotorz.Json.csproj
+++ b/Rotorz.Json/Rotorz.Json.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Json\JsonReader.cs" />
     <Compile Include="Json\JsonParserException.cs" />
     <Compile Include="Json\JsonStringNode.cs" />
+    <Compile Include="Json\JsonFormattingUtility.cs" />
     <Compile Include="Json\JsonWriter.cs" />
     <Compile Include="Json\JsonWriterSettings.cs" />
     <Compile Include="Json\MessagePack\MessagePackExtendedNode.cs" />
