--- a/Rotorz.Json/Rotorz.Json.csproj
+++ b/Rotorz.Json/Rotorz.Json.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Json\JsonWriterSettings.cs" />
     <Compile Include="Json\MessagePack\MessagePackExtendedNode.cs" />
     <Compile Include="Json\MessagePack\MessagePackBinaryNode.cs" />
+    <Compile Include="Json\MessagePack\MessagePackFormatCode.cs" />
     <Compile Include="Json\MessagePack\MessagePackReader.cs" />
     <Compile Include="Json\Serialization\MetaType.cs" />
     <Compile Include="Json\Serialization\ReflectionUtility.cs" />
