Extracted reusable generic `SimpleStack` implementation from `JsonWriter.ContextStack`; this is needed since the .NET one doesn't seem to work on iOS.

--- a/Rotorz.Json/Rotorz.Json.csproj
+++ b/Rotorz.Json/Rotorz.Json.csproj
@@ -32,6 +32,7 @@
     <DocumentationFile>bin\Release\Rotorz.Json.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Json\Internal\SimpleStack.cs" />
     <Compile Include="Json\JsonArrayNode.cs" />
     <Compile Include="Json\JsonBooleanNode.cs" />
     <Compile Include="Json\JsonDoubleNode.cs" />
