Added utility class `JsonUtility` which provides some extension methods for `JsonNode`.

--- a/Rotorz.Json/Rotorz.Json.csproj
+++ b/Rotorz.Json/Rotorz.Json.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Json\JsonStringNode.cs" />
     <Compile Include="Json\JsonFormattingUtility.cs" />
     <Compile Include="Json\IJsonWriter.cs" />
+    <Compile Include="Json\JsonUtility.cs" />
     <Compile Include="Json\JsonWriter.cs" />
     <Compile Include="Json\JsonWriterSettings.cs" />
     <Compile Include="Json\MessagePack\MessagePackExtendedNode.cs" />
