Renamed `JsonNode.WriteTo` to `Write` and moved `ToString(JsonWriterSettings)` into `JsonUtility` as an extension method so that it can operate on a value of `null`.

--- a/Rotorz.Json.Tests/Rotorz.Json.Tests.csproj
+++ b/Rotorz.Json.Tests/Rotorz.Json.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Json\JsonUtilityTests.cs" />
     <Compile Include="Json\JsonParserTests.cs" />
     <Compile Include="Json\JsonArrayNodeTests.cs" />
     <Compile Include="Json\JsonDoubleNodeTests.cs" />
