Added exception type `MesagePackParserException` which can be thrown whilst parsing MessagePack data.

--- a/Rotorz.Json/Rotorz.Json.csproj
+++ b/Rotorz.Json/Rotorz.Json.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Json\JsonUtility.cs" />
     <Compile Include="Json\JsonWriter.cs" />
     <Compile Include="Json\JsonWriterSettings.cs" />
+    <Compile Include="Json\MessagePack\MessagePackParserException.cs" />
     <Compile Include="Json\MessagePack\MessagePackExtendedNode.cs" />
     <Compile Include="Json\MessagePack\MessagePackBinaryNode.cs" />
     <Compile Include="Json\MessagePack\MessagePackFormatCode.cs" />
